# workshop-simple-sut

./: CMakeLists.txt  README.md  cifuzz.yaml
.devcontainer/: Dockerfile  devcontainer.json
fuzz_test/: CMakeLists.txt  my_fuzz_test.cpp
src/: CMakeLists.txt  explore_me.cpp  main.cpp
test/: CMakeLists.txt  explore_me_test.cpp
